# rootfs

./: README.md
DFBTutorials-0.5.0/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in
DFBTutorials-0.5.0/data/: Makefile.am  Makefile.in
DFBTutorials-0.5.0/docs/: Makefile.am  Makefile.in
DFBTutorials-0.5.0/src/: Makefile.am  Makefile.in
DFBTutorials-0.5.0/src/image/: Makefile.am  Makefile.in  image.c
DFBTutorials-0.5.0/src/keybuffer/: Makefile.am  Makefile.in  keybuffer.c
DFBTutorials-0.5.0/src/simple/: Makefile.am  Makefile.in  simple.c
DFBTutorials-0.5.0/src/sprite/: Makefile.am  Makefile.in  sprite.c
DFBTutorials-0.5.0/src/text/: Makefile.am  Makefile.in  text.c
DFBTutorials-0.5.0/tools/: Makefile.am  Makefile.in  gentut.pl
DirectFB-1.1.1/: .gitignore
DirectFB-1.1.1/include/: directfb.h
DirectFB-1.1.1/inputdrivers/linux_input/: linux_input.c
DirectFB-1.1.1/wm/default/: default.c
DirectFB-examples-0.9.23/: ChangeLog  Makefile.in  aclocal.m4  configure  configure.in
DirectFB-examples-0.9.23/data/: Makefile.am  Makefile.in
DirectFB-examples-0.9.23/data/df_neo/: Makefile.in
DirectFB-examples-0.9.23/data/spacedream/: Makefile.in
DirectFB-examples-0.9.23/src/: Makefile.in  df_andi.c  df_cpuload.c  df_databuffer.c  df_dok.c  df_fire.c  df_fonts.c  df_input.c  df_netload.c  df_palette.c  df_porter.c  df_texture.c  ve.c
DirectFB-examples-0.9.23/src/df_knuckles/: Makefile.in  df_knuckles.c
DirectFB-examples-0.9.23/src/df_neo/: Makefile.in  df_neo.c
alsa-utils/: Android.mk
alsa-utils/aplay/: aplay.c
busybox-1.19.3/: gpart_0.1h-11.dsc
libpng-1.2.19/: .configure.swp
(+12 files in other folders)
