AC_INIT(src/simple/simple.c)

AM_INIT_AUTOMAKE(DFBTutorials, 0.5.0)

dnl Initialize maintainer mode
AM_MAINTAINER_MODE

ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_CANONICAL_HOST

AC_PROG_CC
AM_PROG_CC_STDC

changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

AC_ARG_ENABLE(debug, [  --enable-debug          turn on debugging [default=no]],
if eval "test x$enable_debug = xyes"; then
  DEBUGFLAG="-g"
fi)

#
# Check for DirectFB
#
PKG_CHECK_MODULES(DIRECTFB, directfb >= 0.9.11)

DATADIR=`pwd`/data

AC_SUBST(DATADIR)

AC_OUTPUT([
Makefile
data/Makefile
docs/Makefile
src/Makefile
src/image/Makefile
src/keybuffer/Makefile
src/simple/Makefile
src/sprite/Makefile
src/text/Makefile
tools/Makefile
])
